linux_tweet_app-1/manifests/service-576b.yml
apiVersion: v1
kind: Service
metadata:
    name: "bishalbugbashaks-576b"
    labels:
        app: "bishalbugbashaks-576b"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "bishalbugbashaks-576b"
